# eco-audit-ai

./: .gitignore  README.md  docker-compose.yml  render.yaml  test_data_search.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend/blueprints/: recommend.py
backend/utils/: utils.py
frontend/: Dockerfile  README.md  health-check.sh  index.html  nginx.conf  package-lock.json  package.json  render-build.sh  start-nginx.sh  vite.config.ts
frontend/src/: App.css  App.tsx  App.tsx.new
frontend/src/components/: AuditForm.tsx  AuditList.tsx
frontend/src/components/eco-audit/: AuditForm.tsx  LoadingView.tsx  ReportSkeleton.tsx  ReportView.tsx
frontend/src/components/ui/: backend-wakeup.tsx
frontend/src/hooks/: useBackendStatus.ts  useLoadingAnimation.ts
frontend/src/lib/: axios.ts  axios.ts.new
frontend/src/services/: auditService.ts
frontend/src/types/: eco-audit.ts
